# rasterizer

./: Cargo.toml  README.md  occlusions.txt
src/: camera.rs  config.rs  main.rs  math.rs  renderer.rs
