[package]
name = "rasterizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.5"
pixels = "0.13.0"
winit_input_helper = "0.15.0"
scoped_threadpool = "0.1.9"

[dependencies.winit]
version = "0.29.3"
default-features = false
features = ["rwh_05", "x11", "wayland", "wayland-dlopen", "wayland-csd-adwaita"]